# napari-issue-tracker

./: README.md
plugin_issues/cant-find-plugin/: README.md  example_h5_create.py  setup.cfg  test.h5
plugin_issues/cant-find-plugin/follicle_tracker/: napari.yaml  reader_hdf5_plugin.py
plugin_issues/event_loop_error/: setup.cfg
plugin_issues/event_loop_error/napari_methods/: __init__.py  napari.yaml  napari_methods.py
plugin_issues/save-image/: png_write.py  tiff_write.py
widget_issues/: button_not_disabled.py  dropdown.py  dynamic_isolated.py  dynamic_isolated_container.py  dynamic_reset_issue.py  follow_up.py  issue_testing_widget.py  magicgui_update.py  multiple_widgets.py  small_magic.py  two_button_magicgui.py  two_button_parameters.py  update_selection_on_csv.py  update_selection_on_csv_two_widgets.py
