[metadata]
name = follicle-tracker
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires = 
    napari

[options.entry_points]
napari.manifest =
    follicle-tracker = follicle_tracker:napari.yaml

[options.package_data]
* = *.yaml